# smails-rs

./: .gitignore  Cargo.toml  README.md  mise.toml  package.json  rust-toolchain.toml  wrangler.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: api.rs  app.rs  components.rs  lib.rs  pages.rs  storage.rs  ws.rs
crates/frontend/static/: index.html  style.css
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/native/: Cargo.toml
crates/native/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: admin.rs  admin_schema.rs  fixed_window.rs  http.rs  lib.rs  mail.rs  mailbox.rs  migration.rs  mime.rs  rate_limit.rs  schema.rs  support.rs
docs/: api.md  architecture.md  deployment.md  operations.md  rate-limits.md
infra/cloudflare/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf  versions.tf
