[package]
name = "smails-worker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
smails-core = { path = "../core" }
base64 = "0.22.1"
mail-parser = { version = "0.11.4", features = ["full_encoding"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
worker = "0.8.5"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
